[gd_scene load_steps=3 format=3 uid="uid://bk7qh2m5x6nrw"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1"]
[ext_resource type="Script" path="res://scripts/grid_overlay.gd" id="2"]

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 512)
zoom = Vector2(0.8, 0.8)

[node name="GridOverlay" type="Node2D" parent="."]
z_index = -1
script = ExtResource("2")

[node name="BuildingsContainer" type="Node2D" parent="."]

[node name="BuildCursor" type="Node2D" parent="."]
visible = false

[node name="CursorRect" type="Polygon2D" parent="BuildCursor"]
color = Color(0, 1, 0, 0.5)
polygon = PackedVector2Array(0, -32, 64, 0, 0, 32, -64, 0)
